--- a/src/BD/AlquilerInterfaz/CRUD_Propietario.form
+++ b/src/BD/AlquilerInterfaz/CRUD_Propietario.form
@@ -200,6 +200,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtCedula">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtCedulaActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btncargardatos">
       <Properties>
