--- a/src/BD/AlquilerInterfaz/dashboard.form
+++ b/src/BD/AlquilerInterfaz/dashboard.form
@@ -373,6 +373,9 @@
                   <Color id="Hand Cursor"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton9ActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="btnsalir">
               <Properties>
