--- a/src/BD/AlquilerInterfaz/dashboard.form
+++ b/src/BD/AlquilerInterfaz/dashboard.form
@@ -250,6 +250,9 @@
                   <Color id="Hand Cursor"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnreservarActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="btnpago">
               <Properties>
@@ -352,6 +355,9 @@
                   <Color id="Hand Cursor"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton6ActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="jButton7">
               <Properties>
